# rvkit

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: boards.rs  main.rs
cli/src/commands/: boards.rs  build.rs  flash.rs  mod.rs  monitor.rs  new.rs
docs/: rvkit-cahier-des-charges-v2.md
framework/hal/: gpio.zig  hal.zig  i2c.zig  spi.zig  uart.zig
framework/linker/: ch322v003.ld  esp32c3.ld
linker/: esp32c3.ld
src/: boards.rs  main.rs
src/commands/: mod.rs  new.rs
