[package]
name = "rvkit"
version = "0.1.0"
edition = "2024"
authors = ["karagure"]
description = "Rust + Zig CLI/TUI toolchain for RISC-V microcontroller development"
license = "MIT"
repository = "https://github.com/karagure/rvkit"
homepage = "https://github.com/karagure/rvkit"
readme = "../README.md"
keywords = ["embedded", "risc-v", "zig", "microcontroller", "bare-metal"]
categories = ["embedded", "command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.8.1"
toml = "1.0.3"
